--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aniso8601==7.0.0
 asgiref==3.2.10
 Django==3.1.2
+django-filter==2.4.0
 graphene==2.1.8
 graphene-django==2.13.0
 graphql-core==2.3.2
