--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ graphene-django==2.13.0
 graphql-core==2.3.2
 graphql-relay==2.0.1
 promise==2.3
+Pillow==8.0.0
 pytz==2020.1
 Rx==1.6.1
 singledispatch==3.4.0.3
