--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,6 @@
+# Base
 aniso8601==7.0.0
 asgiref==3.2.10
-Django==3.1.2
-django-filter==2.4.0
-graphene==2.1.8
-graphene-django==2.13.0
-graphql-core==2.3.2
-graphql-relay==2.0.1
 promise==2.3
 Pillow==8.0.0
 pytz==2020.1
@@ -14,3 +9,18 @@ singledispatch==3.4.0.3
 six==1.15.0
 sqlparse==0.4.1
 Unidecode==1.1.1
+
+# Django
+Django==3.1.2
+django-filter==2.4.0
+dj-database-url==0.5.0
+
+# Environment
+django-environ==0.4.5
+
+# graphene
+graphene==2.1.8
+graphene-django==2.13.0
+graphql-core==2.3.2
+graphql-relay==2.0.1
+
