--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ dj-database-url==0.5.0
 django-heroku==0.3.1
 whitenoise==5.2.0
 gunicorn==20.0.4
+django-cors-headers==3.5.0
 
 # Environment
 django-environ==0.4.5
