--- a/requirements.txt
+++ b/requirements.txt
@@ -33,12 +33,14 @@ graphql-relay==2.0.1
 # ETL
 certifi==2020.6.20
 chardet==3.0.4
+geopandas==0.8.1
 idna==2.10
 numpy==1.19.2
 pandas==1.1.3
 psycopg2-binary==2.8.6
 python-dateutil==2.8.1
 requests==2.24.0
+Rtree==0.9.4
 SQLAlchemy==1.3.20
 urllib3==1.25.11
 xmltodict==0.12.0
