--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Unidecode==1.1.1
 Django==3.1.2
 django-filter==2.4.0
 dj-database-url==0.5.0
+django-graphql-jwt==0.3.1
 
 # Deploy
 django-heroku==0.3.1
